--- a/changelog
+++ b/changelog
@@ -94,3 +94,4 @@ BUGS :
 - [U] séparer phrases exemples dans même mot 
 - [U] lettres jaunes question
 - [ZH] rajouter gif tracé caractère
+- slider vitesse tts
